# cloop

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  new_design.md  pyproject.toml
.cueloop/: config.jsonc  done.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  ci_full.yml  release.yml
data/: core.db  rag.db
docs/: ai_runtime.md  architecture.md  assistant_blueprint.md  ci-performance.md  ci_strategy.md  clarification-answer-write-path-inventory.md  cloop-life-spec.md  history_rewrite_log.md  history_rewrite_plan.md  public_release_checklist.md  reference.md  release.md  release_readiness_report.md  reviewer_guide.md  reviewer_validation_checklist.md  roadmap.md  verification_checklist.md
docs/internal/: README.md  assistant_blueprint.md  project_goals.md
docs/role-evidence/: README.md  cookbook-guide.md  demo-script.md  evidence-map.md  operational-readiness-checklist.md  workshop-outline.md
docs/ux/: README.md  ai-action-cards.md  command-palette.md  continuity-intelligence.md  experience-vision.md  operator-workspace.md  outcome-continuity-plan.md  outcome-continuity.md  principles.md  review-redesign.md  state-navigation.md  trust-surfaces.md  undo-actions.md  workflow-handoffs.md  working-sets.md
frontend/: index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: action-receipts.ts  bulk-actions.test.ts  bulk-actions.ts  coerce-json-integer.ts  command-palette-ranking.test.ts  command-palette-ranking.ts  command-palette.test.ts  command-palette.ts  continuity-api.ts  continuity-card-helpers.test.ts  continuity-card-helpers.ts  continuity-drift.ts  continuity-follow-through.test.ts  continuity-follow-through.ts  continuity-intelligence.test.ts  continuity-intelligence.ts  continuity-outcomes.test.ts  continuity-outcomes.ts  continuity-recommendations.test.ts  continuity-recommendations.ts  continuity-recovery.ts  continuity-surface-recovery.ts  contracts-ui.ts  domain.ts  duplicates.ts  executable-rerun.ts  executable-undo.test.ts  executable-undo.ts  follow-through-adapters.test.ts  follow-through-adapters.ts  http.test.ts  http.ts  js-modules.d.ts  launch-surface-web.test.ts  launch-surface-web.ts  legacy-entry.js  life-feed.test.ts  life-feed.ts  main.ts  modals.test.ts  (+32 more)
frontend/src/legacy/: api.js  bulk.js  comments.js  duplicates.js  init.js  keyboard.js  markdown.js  modals.js  planning.js  review.js  state.js  stream.js  utils.js
frontend/src/styles/: base.css  chat-rag.css  components.css  layout.css  life.css  loop.css  modals.css  operator.css  review.css  trust-surfaces.css
frontend/src/surfaces/: api.test.ts  api.ts  bootstrap-saved-view.test.ts  bootstrap.ts  bulk.ts  capture.test.ts  capture.ts  chat.test.ts  chat.ts  comments.ts  contracts.ts  duplicates.ts  keyboard.ts  loop.test.ts  loop.ts  markdown.ts  memory.ts  modals.ts  next.test.ts  next.ts  notifications.ts  rag.ts  recall-action-cards.test.ts  recall-action-cards.ts  recall-receipts.test.ts  recall-receipts.ts  render.test.ts  render.ts  sse.ts  state.ts  stream.test.ts  stream.ts  suggestion-receipts.test.ts  suggestion-receipts.ts  suggestions.test.ts  suggestions.ts  timer.test.ts  timer.ts  utils.test.ts  utils.ts
scripts/: check_changelog_sync.py  check_env_sync.py  check_headers.py  check_public_surfaces.py  check_secrets.py  check_version_sync.py  cleanup_runtime.py  export_frontend_openapi.py
src/cloop/: __init__.py  _version.py  backup.py  chat_execution.py  chat_orchestration.py  cli.py  constants.py  continuity_reruns.py  db.py  embedding_providers.py  embeddings.py  error_contract.py  handlers.py  idempotency.py  idempotency_flow.py  life_orchestration.py  litellm_retry.py  llm.py  main.py  mcp_server.py  memory_management.py  operator_now.py  providers.py  push_sender.py  rag.py  rag_execution.py  recall_follow_through.py  recall_handoffs.py  recall_working_sets.py  retry.py  scheduler.py  settings.py  sse.py  tools.py  typingx.py  web.py
src/cloop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cloop/_backup/: __init__.py  archive_io.py  creation.py  inventory.py  manifesting.py  models.py  restore.py  verification.py
src/cloop/_db/: __init__.py  connections.py  core_migrations.py  core_schema.py  rag_schema.py  schema_constants.py  schema_data.py  schema_ops.py  vector.py
src/cloop/_scheduler/: __init__.py  cadence.py  cli.py  models.py  runtime.py  side_effects.py  task_life.py  task_nudges.py  task_reviews.py
src/cloop/_tools/: __init__.py  loops.py  memory.py  models.py  notes.py  registry.py  validation.py
src/cloop/ai_bridge/: __init__.py  errors.py  protocol.py  runtime.py
src/cloop/cli_package/: __init__.py  _runtime.py  backup_commands.py  chat_commands.py  continuity_commands.py  dispatch.py  loop_bulk_commands.py  loop_claim_commands.py  loop_core_commands.py  (+14 more)
src/lib/: data.ts
tests/: conftest.py  helpers.py  test_accessibility.py  test_ai_bridge_runtime.py  test_app.py  test_backup.py  test_changelog_sync.py  test_check_headers.py  test_check_secrets.py  test_cleanup_runtime.py  test_cli.py  test_continuity_http.py  test_continuity_store.py  test_db_failures.py  test_db_schema.py  test_error_contract.py  test_errors.py  test_github_meta_files.py  test_license.py  test_life_orchestration.py  test_llm.py  test_llm_failures.py  test_loop_bulk.py  test_loop_capture.py  test_loop_capture_orchestration.py  test_loop_claims.py  test_loop_comments.py  test_loop_duplicates_merge.py  test_loop_enrichment.py  test_loop_events_undo.py  test_loop_export_import.py  test_loop_idempotency.py  test_loop_operation_metrics.py  test_loop_prioritization.py  test_loop_query_performance.py  test_loop_recurrence.py  test_loop_relationship_review.py  test_loop_review.py  test_loop_semantic_search.py  test_loop_suggestions.py  (+39 more)
(+258 files in other folders)
