[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloop"
version = "0.1.0"
description = "Local-first FastAPI service for chat and RAG."
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [{name = "Cloop"}]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "numpy>=2.0.0",
    "litellm>=1.41.0",
    "pypdf>=4.1.0",
    "mcp>=0.3.0",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.1",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "hypothesis>=6.108.0",
    "ty>=0.0.16",
    "freezegun>=1.5.0",
]

[project.scripts]
cloop = "cloop.cli:main"
cloop-mcp = "cloop.mcp_server:main"



[tool.ruff]
line-length = 100
target-version = "py314"
fix = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP045"]

[tool.ruff.lint.per-file-ignores]
"src/cloop/db.py" = ["E501"]

[tool.ty]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16; use inspect.iscoroutinefunction\\(\\) instead:DeprecationWarning:litellm\\.litellm_core_utils\\.logging_utils",
]
