[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloop"
version = "0.1.0"
description = "Local-first FastAPI service for private chat, RAG, and loop/task workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cloop" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "numpy>=2.0.0",
    "litellm>=1.41.0",
    "pypdf>=4.1.0",
    "mcp>=0.3.0",
    "python-dateutil>=2.9.0",
    "tzdata>=2024.1",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "hypothesis>=6.108.0",
    "ty>=0.0.16",
    "freezegun>=1.5.0",
    "pytest-cov>=6.0.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.urls]
Repository = "https://github.com/fitchmultz/cloop"
Issues = "https://github.com/fitchmultz/cloop/issues"
Security = "https://github.com/fitchmultz/cloop/blob/main/SECURITY.md"
Changelog = "https://github.com/fitchmultz/cloop/blob/main/CHANGELOG.md"

[project.scripts]
cloop = "cloop.cli:main"
cloop-mcp = "cloop.mcp_server:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cloop = ["static/**", "db/migrations/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP045"]

[tool.ruff.lint.per-file-ignores]
"src/cloop/db.py" = ["E501"]

[tool.ty]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: tests that intentionally sleep, use time-based expiry windows, or otherwise run longer",
    "performance: tests focused on performance/scalability behavior and query efficiency",
]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16; use inspect.iscoroutinefunction\\(\\) instead:DeprecationWarning:litellm\\.litellm_core_utils\\.logging_utils",
]
