[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cloop"
version = "0.1.0"
description = "Local-first FastAPI service for private chat, RAG, and loop/task workflows."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cloop" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "numpy>=2.4.2",
    "litellm>=1.82.0",
    "pypdf>=6.7.5",
    "mcp>=1.26.0",
    "python-dateutil>=2.9.0.post0",
    "tzdata>=2025.3",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.5",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "ty>=0.0.21",
    "freezegun>=1.5.5",
    "pytest-cov>=7.0.0",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.urls]
Repository = "https://github.com/fitchmultz/cloop"
Issues = "https://github.com/fitchmultz/cloop/issues"
Security = "https://github.com/fitchmultz/cloop/blob/main/SECURITY.md"
Changelog = "https://github.com/fitchmultz/cloop/blob/main/CHANGELOG.md"

[project.scripts]
cloop = "cloop.cli:main"
cloop-mcp = "cloop.mcp_server:main"
cloop-scheduler = "cloop.scheduler:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cloop = ["static/**", "db/migrations/**"]

[tool.ruff]
line-length = 100
target-version = "py314"
fix = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP045"]

[tool.ruff.lint.per-file-ignores]
"src/cloop/db.py" = ["E501"]

[tool.ty]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: tests that intentionally sleep, use time-based expiry windows, or otherwise run longer",
    "performance: tests focused on performance/scalability behavior and query efficiency",
]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16; use inspect.iscoroutinefunction\\(\\) instead:DeprecationWarning:litellm\\.litellm_core_utils\\.logging_utils",
]
